--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -53,9 +53,9 @@ jobs:
       - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
-          HUGO_ENVIRONMENT: production
-        working-directory: ./website
+          HUGO_ENVIRONMENT: productio
         run: |
+          cd website
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
