reconfigured tsc output to JS dir

--- a/example-workspace/tsconfig.json
+++ b/example-workspace/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./JS",
     "target": "ES5",
     "module": "commonjs",
     "strict": true,
